// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header hides search bar when disabled 1`] = `
<header
  class="app-header sticky top-0 z-50 bg-white transition-all duration-300 ease-in-out pt-safe"
  data-header-state="initial"
  id="app-header"
>
  <div
    class="mx-auto px-4 sm:px-6 lg:px-8"
  >
    <div
      class="grid grid-cols-[auto,1fr,auto] items-center py-2"
    >
       
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Open menu"
          class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline md:hidden"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-6 w-6"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        <a
          class="text-xl font-bold text-brand-dark no-underline"
          href="/"
        >
          Booka.co.za
        </a>
      </div>
      <div
        class="hidden md:flex justify-center flex-grow relative"
      >
        <div
          class="content-area-wrapper header-nav-links opacity-100 pointer-events-auto transition-opacity duration-300 delay-100"
        >
          <nav
            class="flex gap-6"
          >
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/artists"
            >
              Artists
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/services"
            >
              Services
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/faq"
            >
              FAQ
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/contact"
            >
              Contact
            </a>
          </nav>
        </div>
      </div>
      <div
        class="hidden sm:flex items-center gap-2"
      >
        <div
          class="flex gap-2"
        >
          <a
            class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline text-gray-600"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline bg-brand-dark text-white rounded"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header matches compact snapshot with filter control 1`] = `
<header
  class="app-header sticky top-0 z-50 bg-white transition-all duration-300 ease-in-out pt-safe compacted"
  data-header-state="compacted"
  id="app-header"
>
  <div
    class="mx-auto px-4 sm:px-6 lg:px-8"
  >
    <div
      class="grid grid-cols-[auto,1fr,auto] items-center py-2"
    >
       
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Open menu"
          class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline md:hidden"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-6 w-6"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        <a
          class="text-xl font-bold text-brand-dark no-underline"
          href="/"
        >
          Booka.co.za
        </a>
      </div>
      <div
        class="hidden md:flex justify-center flex-grow relative"
      >
        <div
          class="content-area-wrapper header-nav-links opacity-0 pointer-events-none"
        >
          <nav
            class="flex gap-6"
          >
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/artists"
            >
              Artists
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/services"
            >
              Services
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/faq"
            >
              FAQ
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/contact"
            >
              Contact
            </a>
          </nav>
        </div>
        <div
          class="compact-pill-wrapper absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full flex items-center justify-center gap-2 opacity-100 pointer-events-auto transition-opacity duration-300 delay-100"
        >
          <button
            class="flex-1 w-full max-w-xl flex items-center justify-between px-4 py-2 border border-gray-300 rounded-full shadow-sm hover:shadow-md text-sm"
            id="compact-search-trigger"
            type="button"
          >
            <div
              class="flex flex-1 divide-x divide-gray-300"
            >
              <div
                class="flex-1 px-2 truncate"
              >
                Add service
              </div>
              <div
                class="flex-1 px-2 whitespace-nowrap overflow-hidden text-ellipsis"
              >
                Add location
              </div>
              <div
                class="flex-1 px-2 truncate"
              >
                Add dates
              </div>
            </div>
            <svg
              aria-hidden="true"
              class="ml-2 h-5 w-5 text-gray-500 flex-shrink-0"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <div
            class="shrink-0"
          >
            <button>
              F
            </button>
          </div>
        </div>
      </div>
      <div
        class="hidden sm:flex items-center gap-2"
      >
        <div
          class="flex gap-2"
        >
          <a
            class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline text-gray-600"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline bg-brand-dark text-white rounded"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
    <div
      class="content-area-wrapper header-full-search-bar mt-3 max-w-4xl mx-auto relative opacity-0 scale-y-0 h-0 pointer-events-none"
    >
      <form
        aria-label="Artist booking search"
        autocomplete="off"
        class="relative z-[45] flex items-stretch bg-white rounded-r-full shadow-lg transition-all duration-200 ease-out text-base shadow-md hover:shadow-lg"
        role="search"
      >
        <div
          class="flex flex-1 divide-x divide-gray-200"
        >
          <div
            class="relative flex-1 min-w-0"
          >
            <button
              aria-controls="category-popup"
              aria-expanded="false"
              class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-6 py-3 hover:bg-gray-50 focus:bg-gray-50"
              id="category-search-button"
              type="button"
            >
              <span
                class="text-sm text-gray-700 font-semibold  pointer-events-none select-none"
              >
                Category
              </span>
              <span
                class="block truncate pointer-events-none select-none text-gray-500 text-base text-xs"
              >
                Add service
              </span>
            </button>
          </div>
          <div
            class="border-l border-gray-200"
          />
          <div
            class="relative flex-1 min-w-0"
          >
            <button
              aria-controls="when-popup"
              aria-expanded="false"
              class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-6 py-3 hover:bg-gray-50 focus:bg-gray-50"
              id="when-search-button"
              type="button"
            >
              <span
                class="text-sm text-gray-700 font-semibold  pointer-events-none select-none"
              >
                When
              </span>
              <span
                class="block truncate pointer-events-none select-none text-gray-500 text-base text-xs"
              >
                Add dates
              </span>
            </button>
          </div>
          <div
            class="border-l border-gray-200"
          />
          <div
            class="relative flex-1 min-w-0 transition-all duration-200 ease-out px-6 py-3 hover:bg-gray-50 focus-within:bg-gray-50"
          >
            <span
              class="text-sm text-gray-700 font-semibold pointer-events-none select-none"
            >
              Where
            </span>
            <div
              class="relative w-full w-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="autocomplete-options"
                aria-expanded="false"
                class="w-full text-sm text-gray-700 placeholder-gray-400 bg-transparent focus:outline-none block truncate p-0 bg-transparent text-gray-500 text-base text-xs"
                placeholder="Add location"
                role="combobox"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          aria-label="Search now"
          class="bg-[var(--color-accent)] hover:bg-[var(--color-accent)]/90 px-5 py-3 flex items-center justify-center text-white rounded-r-full transition-all duration-200 ease-out active:scale-95"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="sr-only"
          >
            Search
          </span>
        </button>
      </form>
    </div>
  </div>
</header>
`;

exports[`Header renders extraBar when provided 1`] = `
<header
  class="app-header sticky top-0 z-50 bg-white transition-all duration-300 ease-in-out pt-safe"
  data-header-state="initial"
  id="app-header"
>
  <div
    class="mx-auto px-4 sm:px-6 lg:px-8"
  >
    <div
      class="grid grid-cols-[auto,1fr,auto] items-center py-2"
    >
       
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Open menu"
          class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline md:hidden"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-6 w-6"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        <a
          class="text-xl font-bold text-brand-dark no-underline"
          href="/"
        >
          Booka.co.za
        </a>
      </div>
      <div
        class="hidden md:flex justify-center flex-grow relative"
      >
        <div
          class="content-area-wrapper header-nav-links opacity-100 pointer-events-auto transition-opacity duration-300 delay-100"
        >
          <nav
            class="flex gap-6"
          >
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/artists"
            >
              Artists
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/services"
            >
              Services
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/faq"
            >
              FAQ
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/contact"
            >
              Contact
            </a>
          </nav>
        </div>
      </div>
      <div
        class="hidden sm:flex items-center gap-2"
      >
        <div
          class="flex gap-2"
        >
          <a
            class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline text-gray-600"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline bg-brand-dark text-white rounded"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div>
        bar
      </div>
    </div>
  </div>
</header>
`;

exports[`Header renders search bar when enabled 1`] = `
<header
  class="app-header sticky top-0 z-50 bg-white transition-all duration-300 ease-in-out pt-safe"
  data-header-state="initial"
  id="app-header"
>
  <div
    class="mx-auto px-4 sm:px-6 lg:px-8"
  >
    <div
      class="grid grid-cols-[auto,1fr,auto] items-center py-2"
    >
       
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Open menu"
          class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline md:hidden"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-6 w-6"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        <a
          class="text-xl font-bold text-brand-dark no-underline"
          href="/"
        >
          Booka.co.za
        </a>
      </div>
      <div
        class="hidden md:flex justify-center flex-grow relative"
      >
        <div
          class="content-area-wrapper header-nav-links opacity-100 pointer-events-auto transition-opacity duration-300 delay-100"
        >
          <nav
            class="flex gap-6"
          >
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/artists"
            >
              Artists
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/services"
            >
              Services
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/faq"
            >
              FAQ
            </a>
            <a
              class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline border-b-2 transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/contact"
            >
              Contact
            </a>
          </nav>
        </div>
        <div
          class="compact-pill-wrapper absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full flex items-center justify-center gap-2 opacity-0 pointer-events-none"
        >
          <button
            class="flex-1 w-full max-w-xl flex items-center justify-between px-4 py-2 border border-gray-300 rounded-full shadow-sm hover:shadow-md text-sm"
            id="compact-search-trigger"
            type="button"
          >
            <div
              class="flex flex-1 divide-x divide-gray-300"
            >
              <div
                class="flex-1 px-2 truncate"
              >
                Add service
              </div>
              <div
                class="flex-1 px-2 whitespace-nowrap overflow-hidden text-ellipsis"
              >
                Add location
              </div>
              <div
                class="flex-1 px-2 truncate"
              >
                Add dates
              </div>
            </div>
            <svg
              aria-hidden="true"
              class="ml-2 h-5 w-5 text-gray-500 flex-shrink-0"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="hidden sm:flex items-center gap-2"
      >
        <div
          class="flex gap-2"
        >
          <a
            class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline text-gray-600"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="inline-flex items-center justify-center min-h-[44px] min-w-[44px] text-sm font-medium no-underline hover:no-underline bg-brand-dark text-white rounded"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
    <div
      class="content-area-wrapper header-full-search-bar mt-3 max-w-4xl mx-auto relative opacity-100 scale-y-100 pointer-events-auto"
    >
      <form
        aria-label="Artist booking search"
        autocomplete="off"
        class="relative z-[45] flex items-stretch bg-white rounded-r-full shadow-lg transition-all duration-200 ease-out text-base shadow-md hover:shadow-lg"
        role="search"
      >
        <div
          class="flex flex-1 divide-x divide-gray-200"
        >
          <div
            class="relative flex-1 min-w-0"
          >
            <button
              aria-controls="category-popup"
              aria-expanded="false"
              class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-6 py-3 hover:bg-gray-50 focus:bg-gray-50"
              id="category-search-button"
              type="button"
            >
              <span
                class="text-sm text-gray-700 font-semibold  pointer-events-none select-none"
              >
                Category
              </span>
              <span
                class="block truncate pointer-events-none select-none text-gray-500 text-base text-xs"
              >
                Add service
              </span>
            </button>
          </div>
          <div
            class="border-l border-gray-200"
          />
          <div
            class="relative flex-1 min-w-0"
          >
            <button
              aria-controls="when-popup"
              aria-expanded="false"
              class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-6 py-3 hover:bg-gray-50 focus:bg-gray-50"
              id="when-search-button"
              type="button"
            >
              <span
                class="text-sm text-gray-700 font-semibold  pointer-events-none select-none"
              >
                When
              </span>
              <span
                class="block truncate pointer-events-none select-none text-gray-500 text-base text-xs"
              >
                Add dates
              </span>
            </button>
          </div>
          <div
            class="border-l border-gray-200"
          />
          <div
            class="relative flex-1 min-w-0 transition-all duration-200 ease-out px-6 py-3 hover:bg-gray-50 focus-within:bg-gray-50"
          >
            <span
              class="text-sm text-gray-700 font-semibold pointer-events-none select-none"
            >
              Where
            </span>
            <div
              class="relative w-full w-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="autocomplete-options"
                aria-expanded="false"
                class="w-full text-sm text-gray-700 placeholder-gray-400 bg-transparent focus:outline-none block truncate p-0 bg-transparent text-gray-500 text-base text-xs"
                placeholder="Add location"
                role="combobox"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          aria-label="Search now"
          class="bg-[var(--color-accent)] hover:bg-[var(--color-accent)]/90 px-5 py-3 flex items-center justify-center text-white rounded-r-full transition-all duration-200 ease-out active:scale-95"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="sr-only"
          >
            Search
          </span>
        </button>
      </form>
    </div>
  </div>
</header>
`;
